# rp-piko2w-synced-timer-rs

./: Cargo.toml  README.md  justfile  rust-toolchain.toml
resources/: wifi_setup.html  wifi_setup_success.html
src/: alarm.rs  credentials_flash.rs  credentials_webserver.rs  flash.rs  main.rs  network.rs
