[package]
name = "rp-piko2w-synced-timer-rs"
version = "0.1.0"
edition = "2024"
["features"]
"server" = []
"client" = []

[dependencies]
embassy-time = { version = "0.4", features = [
  "defmt",
  "defmt-timestamp-uptime",
] }
embassy-embedded-hal = { version = "0.3.0", features = ["defmt"] }
embassy-sync = { version = "0.7.0", features = ["defmt"] }
heapless = "0.8.0"
embassy-executor = { version = "0.7", features = [
  "arch-cortex-m",
  "executor-thread",
  "executor-interrupt",
  "defmt",
] }
embassy-rp = { version = "0.4", features = [
  "defmt",
  "unstable-pac",
  "time-driver",
  "critical-section-impl",
  "rp235xa",
  "binary-info",
] }
embassy-usb = { version = "0.4.0", features = ["defmt"] }
embassy-net = { version = "0.7", features = [
  "defmt",
  "tcp",
  "udp",
  "raw",
  "dhcpv4",
  "medium-ethernet",
  "dns",
  "proto-ipv4",
] }
embassy-net-wiznet = { version = "0.2.0", features = ["defmt"] }
embassy-futures = { version = "0.1.0" }
embassy-usb-logger = { version = "0.4.0" }
cyw43 = { version = "0.3.0", features = ["defmt", "firmware-logs"] }
cyw43-pio = { version = "0.4.0", features = ["defmt"] }

defmt = "1.0.1"
defmt-rtt = "1.0.0"
fixed = "1.23.1"
fixed-macro = "1.2"


serde = { version = "1.0.203", default-features = false, features = ["derive"] }
serde-json-core = "0.6.0"

cortex-m = { version = "0.7.6", features = ["inline-asm"] }
cortex-m-rt = "0.7.0"
critical-section = "1.1"
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
log = "0.4"
static_cell = { version = "2.1.0", features = ["nightly"] }
embedded-io-async = "0.6.1"
embedded-storage-async = "0.4.1"

[target.thumbv8m.main-none-eabi]
runner = 'probe-rs run --chip RP235x'

[profile.release]
debug = 2

[profile.dev]
lto = true
opt-level = "z"
